codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_unelevated_policy.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Set up the UnieAI Code agent sandbox to protect your files and control network access. Learn
  more <https://developers.openai.com/codex/windows>

› 1. Use non-admin sandbox (higher risk if prompt injected)
  2. Quit

  Press enter to confirm or esc to go back
